# pmsm-playground

./: CMakeLists.txt  Dockerfile  README.md
configs/: pmsm.yaml  sim_sys.yaml
doc/: Overview.md  PMSM_Model.md
doc/.pictures/: architecture.drawio
playground/: CMakeLists.txt
playground/board/: CMakeLists.txt  current_meas.cc  current_meas.h  inverter.cc
playground/peripherial/: CMakeLists.txt  encoder.h  pmsm.h
playground/uc/: CMakeLists.txt  adc.cc  adc.h  pwm.cc  pwm.h  qep.cc  qep.h
src/: CMakeLists.txt  inverter.cc  inverter.h  main.cc  motor_phase.h  pmsm.cc  pmsm.h  pmsm_sim.cc  pmsm_sim.h  pwm.cc  pwm.h
src/board/: inverter.cc
src/hw_simulation/motor/: motor_phase.cc
src/hw_simulation/uc/: pwm.cc  pwm.h
src/motor/: pmsm.cc  pmsm.h
src/playground/: CMakeLists.txt
src/playground/board/: inverter.h
src/playground/peripherial/: encoder.cc  pmsm.cc
src/playground/uc/: pwm.h
